{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 50,
  "lineage": "3b076115-259f-1df9-1a76-196ae559496c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040091855178:internet-gateway/igw-01bdac23e2e53457f",
            "id": "igw-01bdac23e2e53457f",
            "owner_id": "040091855178",
            "tags": {
              "Name": "nova-shield-igw"
            },
            "tags_all": {
              "Name": "nova-shield-igw"
            },
            "vpc_id": "vpc-0efdfd6033c0525d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nova_shield_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040091855178:route-table/rtb-02bf3dbe48442c611",
            "id": "rtb-02bf3dbe48442c611",
            "owner_id": "040091855178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bdac23e2e53457f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nova-shield-public-route"
            },
            "tags_all": {
              "Name": "nova-shield-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efdfd6033c0525d9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.nova_shield_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06650e741b5653de1",
            "route_table_id": "rtb-02bf3dbe48442c611",
            "subnet_id": "subnet-06d4fd2bb23f152fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.nova_shield_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040091855178:security-group/sg-0574c8d29c7c52f49",
            "description": "Allows incoming access to dashboard application layout",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0574c8d29c7c52f49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "nova-shield-ecs-sg",
            "name_prefix": "",
            "owner_id": "040091855178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efdfd6033c0525d9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nova_shield_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040091855178:subnet/subnet-06d4fd2bb23f152fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d4fd2bb23f152fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040091855178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nova-shield-public-subnet"
            },
            "tags_all": {
              "Name": "nova-shield-public-subnet"
            },
            "vpc_id": "vpc-0efdfd6033c0525d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nova_shield_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nova_shield_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040091855178:vpc/vpc-0efdfd6033c0525d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032597db8e3122db2",
            "default_route_table_id": "rtb-0762a9463e111329e",
            "default_security_group_id": "sg-015c6f975bce727e6",
            "dhcp_options_id": "dopt-07f3554cc52c41fb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efdfd6033c0525d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0762a9463e111329e",
            "owner_id": "040091855178",
            "tags": {
              "Name": "nova-shield-vpc"
            },
            "tags_all": {
              "Name": "nova-shield-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}